# tgChatServer

./: .clang-format  .clangd  .gitignore  README.md
public/: CMakeLists.txt  make.sh  msg_proto_mapper.py
public/proto/: base.proto  chat.proto  core_user.proto  err_code.proto  gate.proto  login.proto  msg_id.proto  notify.proto
public/proto_files/: base.pb.cc  base.pb.h  chat.pb.cc  chat.pb.h  core.pb.cc  core.pb.h  core_msg_id.pb.cc  core_msg_id.pb.h  core_user.pb.cc  core_user.pb.h  err_code.pb.cc  err_code.pb.h  gate.pb.cc  gate.pb.h  msg_id.pb.cc  msg_id.pb.h  msg_mapping.h  msg_mapping_ss.h  notify.pb.cc  notify.pb.h  ss_base.pb.cc  ss_base.pb.h  ss_err_code.pb.cc  ss_err_code.pb.h  ss_msg_id.pb.cc  ss_msg_id.pb.h
public/ss_proto/: core.proto  core_msg_id.proto  ss_base.proto  ss_err_code.proto  ss_msg_id.proto
server/: CMakeLists.txt  build.sh  config.json  main.cpp
server/account/: AccountService.cpp  AccountService.h  CMakeLists.txt
server/account/test/: CMakeLists.txt  test_account_service.cpp
server/busd/: Busd.cpp  Busd.h  BusdService.cpp  BusdService.h  CMakeLists.txt
server/center/: CMakeLists.txt  CenterService.cpp  CenterService.h  HealthChecker.cpp  HealthChecker.h  HttpServer.cpp  HttpServer.h  LoadBalancer.cpp  LoadBalancer.h  README.md  ServiceInstance.cpp  ServiceInstance.h  ServiceRegistry.cpp  ServiceRegistry.h  TcpRegistrar.cpp  TcpRegistrar.h
server/center/test/: CMakeLists.txt  test_load_balancer.cpp  test_service_registry.cpp
server/client/: CMakeLists.txt  NetPack.cpp  NetPack.h  base.pb.cc  base.pb.h  config_update.pb.cc  config_update.pb.h  main.cpp
server/cluster/: CenterManager.cpp  CenterManager.h  ClusterManager.cpp  ClusterManager.h  RegistryClient.cpp  RegistryClient.h
server/common/: CMakeLists.txt  Callback.hpp  Channel.h  CommonDef.h  EventPump.hpp  FuncResolver.hpp  GlobalSpace.cpp  GlobalSpace.h  Helper.cpp  Helper.h  JsonConfig.cpp  JsonConfig.h  JsonConfigNode.cpp  JsonConfigNode.h  LoadBalancer.cpp  LoadBalancer.h  Log.h  MsgDispatcher.h  ServerStruct.h  ServiceInstance.cpp  ServiceInstance.h  StdExtend.h  Timer.cpp  Timer.h  Variant.hpp
server/common/test/: CMakeLists.txt  test_helper.cpp  test_helper_forward.cpp  test_variant.cpp
server/connd/: CMakeLists.txt  ConndMsgDispatcher.cpp  ConndMsgDispatcher.h  ConndService.cpp  ConndService.h  SessionManager.cpp  SessionManager.h
server/connd/auth/: AuthProviderFactory.h  IAuthProvider.h  JwtAuthProvider.cpp  JwtAuthProvider.h
server/connd/handler/: ConndHeartHandler.cpp  ConndHeartHandler.h
server/connd/test/: CMakeLists.txt  test_connd_dispatcher.cpp  test_jwt_auth.cpp  test_session_manager.cpp
server/core/: CMakeLists.txt
server/core/app/: CommandLineParser.cpp  CommandLineParser.h  IApp.cpp  IApp.h  README.md  SignalHandler.cpp  SignalHandler.h  TerminalInterface.cpp  TerminalInterface.h  iApp.cpp  iApp.h
server/core/bus/: BusClientNet.cpp  BusClientNet.h  BusNet.cpp  BusNet.h  BusdNet.cpp  BusdNet.h  IBus.cpp  IBus.h  IBusCommon.h  IBusNet.cpp  IBusNet.h
server/core/common/JsonParser/: JsonParser.cpp  README.md
server/core/common/jsonParser/: ConfigManager.cpp  ConfigManager.h  JsonParser.h
server/core/common/json_parser/: ConfigManager.cpp  ConfigManager.h  IConfigParser.h
server/core/coroutine/: CoroutineScheduler.cpp  CoroutineScheduler.h
server/core/network/: AppMsg.h  EventLoopWrapper.cpp  EventLoopWrapper.h  IListener.h  KcpListener.cpp  KcpListener.h  MsgWrapper.h  PackBase.h  SocketWrapper.cpp  SocketWrapper.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpListener.h  TcpServer.cpp  TcpServer.h  WsListener.cpp  WsListener.h
server/core/shm/: shm.cpp  shm.h  shm_base.h  shm_epoch.h  shm_hashmap.cpp  shm_hashmap.h  shm_lock.cpp  shm_lock.h  shm_ringbuffer.cpp  shm_ringbuffer.h  shm_slab.cpp  shm_slab.h  shm_spinlock.h
server/core/shm/test/: CMakeLists.txt  test_shm_ringbuffer.cpp  test_shm_slab.cpp  test_shm_spinlock.cpp
server/core/slab/: slab_base.h  slab_extensions.h  slab_hybrid.h
server/logic/: CMakeLists.txt  ILogic.h  LogicService.cpp  LogicService.h  ModuleManager.cpp  ModuleManager.h  logicSvr.h
server/logic/Chat/: chat_mgr.cpp  chat_mgr.h  player_chat_info.cpp  player_chat_info.h
server/logic/Heart/: HeartHandler.cpp  HeartHandler.h
server/logic/TelegramBot/: TelegramBot.cpp  TelegramBot.h
server/network/: CMakeLists.txt  EpollWrapper.cpp  EpollWrapper.h  EventLoopWrapper.cpp  EventLoopWrapper.h  NetPack.cpp  NetPack.h  ServerNetPack.cpp  ServerNetPack.h  SocketWrapper.cpp  SocketWrapper.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
third/curl/lib/: libcurl.la  libcurl.so.4
third/curl/lib/pkgconfig/: libcurl.pc
third/curl/share/man/man1/: curl.1
third/curl/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  CURLINFO_PROTOCOL.3  CURLINFO_PROXYAUTH_AVAIL.3  CURLINFO_PROXY_ERROR.3  (+456 more)
third/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
third/protobuf/lib/cmake/protobuf/: protobuf-targets.cmake
third/protobuf/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
third/zlib/lib/pkgconfig/: zlib.pc
tools/: build_thirds.sh
